- remove color of text when user mouse over on the item of reason area - add  "Loopers" on Reason area of home page - Loopers©  - Loopers © - Fix bug align for all item of search results - Add button "view detail" on Github Profile Detail

--- a/src/main/webapp/assets/sass/talent-search-result.sass
+++ b/src/main/webapp/assets/sass/talent-search-result.sass
@@ -62,7 +62,7 @@
         width: 100%
         display: block
         padding: 10px
-        min-height: 438px
+        min-height: 450px
       .main-skill
         width: 100%
         clear: both
